--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,8 @@
 
     <groupId>simpleweb</groupId>
     <artifactId>simpleweb</artifactId>
-    <version>3.0</version>
+    <packaging>pom</packaging>
+    <version>1.0-SNAPSHOT</version>
 
     <dependencies>
 
